changes in architecture

--- a/PsychologicalTestWithBlazor/Components/QuestionItem.razor
+++ b/PsychologicalTestWithBlazor/Components/QuestionItem.razor
@@ -1,4 +1,4 @@
-﻿@using PsychologicalTestWithBlazor.Components.Models
+﻿@using PsychologicalTestWithBlazor.Models
 
 <div class="question-container">
     <p style="font-size:2vw">@Question.Id. @Question.Text</p>
